# chrome-gemini-guard

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  dashboard_layout_constraints.md  done_checklist.md  project_overview.md  suggested_commands.md
docs/: step3-handoff.md  tdd-boundary.md
src/: layout.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  events.rs  guardian.rs  health.rs  mod.rs
src-tauri/src/domain/: drift_report.rs  mod.rs  policy.rs
src-tauri/src/services/: audit_log_service.rs  autostart_service.rs  mod.rs  network_hint_service.rs  path_resolver.rs  repair_service.rs  tray_service.rs  watch_service.rs
src-tauri/tests/: path_resolver_windows.rs  policy_contract.rs  repair_retry_policy.rs  startup_reconcile_flow.rs  tray_state_contract.rs
src-tauri/tests/fixtures/local_state_cases/: already_compliant.json  cn_drift.json  mixed_values.json
src/app/: dashboard.tsx  globals.css  logs.tsx  settings.tsx  shell.css  ui.ts
src/components/: event-list.tsx  rules-preview.tsx  settings-panel.tsx  status-cards.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  label.tsx  (+4 more)
src/i18n/: index.ts
src/lib/: api.ts  types.ts  utils.ts
src/test/: api-contract.test.ts  ui-contract.test.tsx
(+2 files in other folders)
