[package]
name = "chrome-gemini-guard"
version = "1.0.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
